Fix hover isues on mobile devices

--- a/src/components/slideItem.scss
+++ b/src/components/slideItem.scss
@@ -51,9 +51,11 @@
             text-decoration: none;
         }
 
-        &:hover {
-            transform: scale(1.05);
-            box-shadow: 5px 5px 10px rgba(56, 56, 56, 0.6);
+        @media (min-width: 1000px) {
+            &:hover {
+                transform: scale(1.05);
+                box-shadow: 5px 5px 10px rgba(56, 56, 56, 0.6);
+            }
         }
     }
 }
